--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,6 @@ jobs:
       - run:
           name: Run tests
           command: npm run test
+      - run:
+          name: check code style
+          command: npm run lint
