ci: fix file config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Update NPM
-          command: "sudo npm install -g npm@5"
+          name: install the dependencies
+          command: npm install
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
