chore: optimize the pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,9 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/node:14.17.6
+      - image: cimg/node:14.17.6
+    - setup_remote_docker:
+          docker_layer_caching: true
     steps:
       - checkout
       - run:
