ci: optimize pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,11 @@ jobs:
       - image: cimg/node:14.17.6
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Building docker image
+          command: docker build .
       - run:
           name: install the dependencies
           command: npm install
