--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info"
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
@@ -31,6 +31,7 @@
     "@testing-library/react": "^12.1.4",
     "babel-loader": "^8.2.4",
     "babel-plugin-styled-components": "^2.0.6",
+    "coveralls": "^3.1.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
