--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info"
+    "test": "jest",
+    "test:coveralls": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info"
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
