--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest",
-    "test:coveralls": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info"
+    "test": "jest --silent --noStackTrace --runInBand  --no-cache",
+    "test:ci": "npm test -- --coverage",
+    "test:coveralls": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint"
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
@@ -41,8 +46,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.7",
     "git-commit-msg-linter": "^4.1.1",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-styled-components": "^7.0.8",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.1"
   }
 }
