--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
     "test": "jest --silent --noStackTrace --runInBand  --no-cache",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "jest --passWithNoTests --coverage && coveralls < coverage/lcov.info",
