--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,6 @@ jobs:
           command: npm run test:coveralls
       - coveralls/upload:
           verbose: true
+      - run:
+          name: Building
+          command: npm run build
