--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
+    "moment": "^2.29.2",
     "next": "12.1.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
