--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "update-snap": "jest --updateSnapshot",
     "prepare": "husky install"
   },
+  "cacheDirectories": [".next/cache"],
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint"
   },
